fix spacing within details

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -496,13 +496,12 @@ form.vote
       padding-right 1em
       white-space nowrap
     .details
-      padding 0 10px
       border-radius 2px
       height 0
       overflow hidden
       transition height 100ms ease, background-color 100ms ease, margin 100ms ease
       h3
-        margin 0.75em 2px 0
+        margin 0.5em 2px 0
       p
         margin 0.5em 0
       p, ul, ol
@@ -525,6 +524,7 @@ form.vote
     .current
       .details
         margin 0.5em 0
+        padding 5px 10px
         box-shadow inset 0 0 5px hsla(0, 0%, 0%, 0.1)
         background-color hsl(0, 0%, 95%)
         background-color hsla(0, 0%, 95%, 0.5)
